syntax = "proto3";

import "google/protobuf/wrappers.proto";

package ecommerce;

service HelloServer {
    rpc hello(google.protobuf.StringValue) returns (google.protobuf.StringValue);
}

// protoc -I /Users/lichao30/gopath/pkg/mod/github.com/gogo/protobuf@v1.3.1/protobuf -I ecommerce --go_out=plugins=grpc:ecommerce ecommerce/helloserver.proto